; ModuleID = '/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_trivial.c_merge_trivial_conflict_entrycount.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/merge/workdir/extr_trivial.c_merge_trivial_conflict_entrycount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo_index = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @merge_trivial_conflict_entrycount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @merge_trivial_conflict_entrycount() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 0, i64* %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %21, %0
  %5 = load i64, i64* %3, align 8
  %6 = load i32, i32* @repo_index, align 4
  %7 = call i64 @git_index_entrycount(i32 %6)
  %8 = icmp ult i64 %5, %7
  br i1 %8, label %9, label %24

9:                                                ; preds = %4
  %10 = load i32, i32* @repo_index, align 4
  %11 = load i64, i64* %3, align 8
  %12 = call i32* @git_index_get_byindex(i32 %10, i64 %11)
  store i32* %12, i32** %1, align 8
  %13 = call i32 @cl_assert(i32* %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i64 @git_index_entry_is_conflict(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %9
  %18 = load i64, i64* %2, align 8
  %19 = add i64 %18, 1
  store i64 %19, i64* %2, align 8
  br label %20

20:                                               ; preds = %17, %9
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %3, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %3, align 8
  br label %4

24:                                               ; preds = %4
  %25 = load i64, i64* %2, align 8
  ret i64 %25
}

declare dso_local i64 @git_index_entrycount(i32) #1

declare dso_local i32 @cl_assert(i32*) #1

declare dso_local i32* @git_index_get_byindex(i32, i64) #1

declare dso_local i64 @git_index_entry_is_conflict(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
